<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.musicvibes.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/desc"
            android:scaleType="fitStart"
            android:src="@drawable/musical_notes" />

        <TextView
            android:id="@+id/playing"
            style="@style/text_style"
            android:layout_centerInParent="true"
            android:fontFamily="cursive"
            android:text="@string/now_playing" />

        <TextView
            android:id="@+id/playlists"
            style="@style/text_style"
            android:layout_below="@id/playing"
            android:fontFamily="cursive"
            android:text="@string/playlists" />

        <TextView
            android:id="@+id/albums"
            style="@style/text_style"
            android:layout_below="@id/playlists"
            android:fontFamily="cursive"
            android:text="@string/albums" />

        <TextView
            android:id="@+id/songs"
            style="@style/text_style"
            android:layout_below="@id/albums"
            android:fontFamily="cursive"
            android:text="@string/songs" />

        <TextView
            android:id="@+id/settings"
            style="@style/text_style"
            android:layout_below="@id/songs"
            android:fontFamily="cursive"
            android:text="@string/settings" />

    </RelativeLayout>
</ScrollView>
</layout>