<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.musicvibes.NowPlayingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/image_view"/>

        <TextView
            android:id="@+id/albums"
            style="@style/activity_text_style"
            android:text="@string/albums_desc"/>

        <Button
            android:id="@+id/nowButton"
            style="@style/button_style"
            android:layout_alignLeft="@+id/albums"
            android:layout_alignStart="@id/albums"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/now_playing" />

        <Button
            android:id="@+id/backButton"
            style="@style/button_style"
            android:layout_alignEnd="@+id/albums"
            android:layout_alignRight="@+id/albums"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/back" />

    </RelativeLayout>
</layout>